--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.github.andriov.FoodStoreModules:foodstoreexception:0.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.github.andriov:FoodStoreModules:v1.1'
 }
