--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:name=".LateralMenu"
             android:label="@string/title_activity_lateral_menu"
             android:theme="@style/AppTheme" />
-        <activity android:name=".SellerProfile"></activity>
+        <activity android:name=".SellerProfile" />
+        <activity android:name=".Home"></activity>
     </application>
 
 </manifest>
